# docs/swagger.json
@@ -77,33 +77,6 @@
                 }
             }
         },
-        "/api/auth/v1/login": {
-            "post": {
-                "description": "Get AccessToken By ApiKey",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auth"
-                ],
-                "parameters": [
-                    {
-                        "description": "AccessToken Model",
-                        "name": "credential",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.ClientCredential"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
         "/api/dashboard/v1/node": {
             "get": {
                 "description": "get node members",
@@ -128,6 +101,22 @@
                     }
                 }
             }
+        },
+        "/api/healthz": {
+            "get": {
+                "description": "Get Healthz",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Healthz"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -138,14 +127,6 @@
                     "type": "string"
                 },
                 "publicKey": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.ClientCredential": {
-            "type": "object",
-            "properties": {
-                "apiKey": {
                     "type": "string"
                 }
             }
